<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/opcMejoresResultados"
        android:title="@string/txtOpcionMejoresResultados"
        android:icon="@drawable/podium_24px"
        android:orderInCategory="1"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/opcReiniciarPartida"
        android:title="@string/txtReiniciarPartida"
        android:icon="@drawable/restart_alt_24px"
        android:orderInCategory="5"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/opcGuardarPartida"
        android:title="@string/txtOpcionGuardar"
        android:icon="@drawable/save_24px"
        android:orderInCategory="10"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/opcAjustes"
        android:title="@string/txtAjustes"
        android:icon="@drawable/settings_24px"
        android:orderInCategory="20"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/opcCargarPartida"
                android:title="@string/txtOpcionCargar"
                android:icon="@drawable/upload_24px"
                />

            <item
                android:id="@+id/opcTemas"
                android:title="@string/txtTemas"
                android:icon="@drawable/palette_24px"
            />

            <item
                android:id="@+id/opcAcercaDe"
                android:title="@string/aboutText"
                android:icon="@drawable/info_24px"
                />
        </menu>
    </item>
</menu>