<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtDialogoFinalTitulo"
        android:fontFamily="@font/super_comic"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:paddingBottom="12dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtGanador"
            android:textStyle="bold"
            android:fontFamily="@font/monofonto"
            android:textColor="@color/white"
            android:textSize="23sp"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="18dp">

            <ImageView
                android:id="@+id/ivCrown"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_crown"
                android:contentDescription="@string/txtGanador"/>

            <TextView
                android:id="@+id/tvPlayer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="22sp"
                android:fontFamily="@font/monofonto"
                android:text="@string/txtPlayer1"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/btnReiniciar"
            style="@style/ConfirmButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtDialogoFinalVolver"/>

        <View
            android:layout_width="12dp"
            android:layout_height="0dp" />

        <Button
            android:id="@+id/btnSalir"
            style="@style/CancelButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnSalir"/>
    </LinearLayout>

</LinearLayout>
