<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog"
    android:gravity="center"
    android:padding="24dp">

    <TextView
        android:id="@+id/tvTitleDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtModoJuego"
        android:textColor="@color/white"
        android:fontFamily="@font/komikax"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="24dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="10dp">

        <ImageButton
            android:id="@+id/btnClasico"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:background="@drawable/bg_press_button"
            android:src="@drawable/modoclasico"
            android:contentDescription="@string/txtClasico"
            android:elevation="6dp"
            android:translationZ="6dp"
            android:stateListAnimator="@null"
            android:layout_marginEnd="16dp"/>

        <ImageButton
            android:id="@+id/btnRapido"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:background="@drawable/bg_press_button"
            android:src="@drawable/modorapido"
            android:contentDescription="@string/txtRapido"
            android:elevation="6dp"
            android:translationZ="6dp"
            android:stateListAnimator="@null"
            android:layout_marginEnd="16dp"/>

        <ImageButton
            android:id="@+id/btnFiebre"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:background="@drawable/bg_press_button"
            android:src="@drawable/fiebredelasemilla"
            android:contentDescription="@string/txtFiebre"
            android:elevation="6dp"
            android:translationZ="6dp"
            android:stateListAnimator="@null"
            android:layout_marginEnd="16dp"/>
    </LinearLayout>

</LinearLayout>
